force-app/main/default/objects/RS_Agent_Workflow__c/RS_Agent_Workflow__c.object-meta.xml
<CustomObject>
    <label>Agent Workflow</label>
    <nameField>
        <label>Agent Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>