force-app/main/default/objects/RS_Agent_Workflow__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <formula>Value(RS_Action_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>