force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>RS_Action_Name__c</fullName>
    <label>Action Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>