force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>RS_Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input Parameter</fullName>
            </value>
            <value>
                <fullName>Button</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
                <isActive>false</isActive>
                <label>Text</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>