force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Additional_Agent_Instructions__c.field-meta.xml
<CustomField>
    <fullName>RS_Additional_Agent_Instructions__c</fullName>
    <label>Additional Agent Instructions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>