force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Agent_Instructions__c.field-meta.xml
<CustomField>
    <fullName>RS_Agent_Instructions__c</fullName>
    <label>Agent Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>