force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Agent_Selection__c.field-meta.xml
<CustomField>
    <fullName>RS_Agent_Selection__c</fullName>
    <label>Agent Selection</label>
    <length>50</length>
    <type>Text</type>
</CustomField>