force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_AutomatedNotes__c.field-meta.xml
<CustomField>
    <fullName>RS_AutomatedNotes__c</fullName>
    <description>Created to capture notes from the guided flow on the Agent Guided Workflow. This maps to Desciption field on Case.</description>
    <label>Automated Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>