force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Case_Fields_to_Update__c.field-meta.xml
<CustomField>
    <fullName>RS_Case_Fields_to_Update__c</fullName>
    <label>Case Fields to Update</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>