force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>RS_Component_Name__c</fullName>
    <label>Component Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>