force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Flow_Classification__c.field-meta.xml
<CustomField>
    <fullName>RS_Flow_Classification__c</fullName>
    <label>Flow Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Maintainance Inquiry</fullName>
            </value>
            <value>
                <fullName>Order Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>