force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_IsIntent__c.field-meta.xml
<CustomField>
    <fullName>RS_IsIntent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsIntent</label>
    <type>Checkbox</type>
</CustomField>