force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Link__c.field-meta.xml
<CustomField>
    <fullName>RS_Link__c</fullName>
    <label>Link</label>
    <type>Url</type>
</CustomField>