force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Mandatory_Input__c.field-meta.xml
<CustomField>
    <fullName>RS_Mandatory_Input__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Input?</label>
    <type>Checkbox</type>
</CustomField>