force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Scripting_Data__c.field-meta.xml
<CustomField>
    <fullName>RS_Scripting_Data__c</fullName>
    <label>Scripting, Data</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>