force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Step_Name__c.field-meta.xml
<CustomField>
    <fullName>RS_Step_Name__c</fullName>
    <label>Step Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>