force-app/main/default/objects/RS_Agent_Workflow__c/fields/RS_Text_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>RS_Text_Field_Type__c</fullName>
    <label>Input Parameter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>datetime</fullName>
            </value>
            <value>
                <fullName>time</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>