force-app/main/default/objects/RS_Agent_Workflow__c/fields/Text_Field_To_Update__c.field-meta.xml
<CustomField>
    <fullName>Text_Field_To_Update__c</fullName>
    <label>Field To Update</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>